third_party/move/move-compiler-v2/tests/unit_test/test/expected_failure_out_of_range_value.exp

Diagnostics:
warning: Test will pass on an abort from *any* module.
  ┌─ tests/unit_test/test/expected_failure_out_of_range_value.move:6:24
  │
6 │     #[expected_failure(abort_code=18446744073709551614)]
  │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │                                   │
  │                                   Replace value with constant from expected module or add `location=...` attribute.

warning: Test will pass on an abort from *any* module.
   ┌─ tests/unit_test/test/expected_failure_out_of_range_value.move:11:24
   │
11 │     #[expected_failure(abort_code=18446744073709551615)]
   │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │                                   │
   │                                   Replace value with constant from expected module or add `location=...` attribute.

error: Invalid attribute value: only u64 literal values permitted
   ┌─ tests/unit_test/test/expected_failure_out_of_range_value.move:16:35
   │
16 │     #[expected_failure(abort_code=18446744073709551616)]
   │                                   ^^^^^^^^^^^^^^^^^^^^
